--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </div>
                     <p id="msg" class="text-center text-danger fw-bold">N.B: Search with Name & first letter of meal</p>
                 </div>
-                <div id="mealDetails"></div>
+                <div id="mealDetails" class="row"></div>
                 <div class="row" id="allCards"></div>
             </div>
         </div>
