--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- css -->
@@ -20,7 +22,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="row form mt-5">
-                    <div class="input-group mb-3 w-50 mx-auto">
+                    <div class="input-group mb-3 w-50 mx-auto inputDiv">
                         <input type="text" class="form-control" placeholder="Search your meal"
                             aria-describedby="SearchBtn" id="searchText">
                         <button class="btn btn-success" type="button" id="searchBtn">Search</button>
